# Apple-Bot

./: README.md  SECURITY.md  animations.py  apple_bot_test_report.json  main.py  requirements.txt
DiscordBotManager/: package-lock.json  package.json
DiscordBotManager/GitHubBrowser (2) (1)/GitHubBrowser/: apple_bot_test_report.json  changelog.json  comprehensive_test.py  pyproject.toml  test_commands.py  test_fishing_hunting_fix.py  test_timezone_switching.py
DiscordBotManager/GitHubBrowser (2) (1)/GitHubBrowser/cogs/: affiliates.py  community.py  economy.py  fun.py  pets.py  serversetup.py  settings.py  slash_logging.py  stickynotes.py  support.py  utility.py  welcome.py
GitHubBrowser/: AFFILIATE_SYSTEM_COMPLETE.md  ANNOUNCEMENT_USAGE.md  API_REMOVAL_SUMMARY.md  APPLE_BOT_COMPLETE_FEATURE_LIST.md  APPLICATION_SYSTEM_COMPLETE.md  BUG_FIXES_SUMMARY.md  BUG_FIX_REPORT.md  COMMANDS_DIRECTORY_COMPLETE.md  COMPLETE_ENHANCED_FEATURES_SUMMARY.md  COMPREHENSIVE_TRACKING_IMPLEMENTATION.md  DATABASE_ERROR_RESOLUTION.md  DATABASE_ERROR_RESOLUTION_COMPLETE.md  DEPLOYMENT_READY_SUMMARY.md  ENHANCED_APPLICATION_FEATURES.md  ENHANCED_FEATURES.md  ENHANCED_SERVERSETUP_SUMMARY.md  FINAL_MUSIC_REMOVAL_VERIFICATION.md  FISHING_HUNTING_FIX_SUMMARY.md  GIVEAWAY_INVITE_SYSTEMS_SUMMARY.md  HANGMAN_FIX_SUMMARY.md  HELP_SYSTEM_COMPLETE.md  MAINTENANCE_STATUS_FIX.md  MAINTENANCE_SYSTEM_SUMMARY.md  MUSIC_REMOVAL_COMPLETE.md  NO_API_DEPENDENCIES_COMPLETE.md  README.md  RESTART_COMMAND_COMPLETE.md  RESTORATION_COMPLETE.md  SERVER_SETUP_COMPLETE.md  SETTINGS_SYSTEM_COMPLETE.md  animations.py  (+13 more)
(+44 files in other folders)
